--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -153,7 +153,7 @@ html,body {
 }
 .right-container .review .right-container-note-list .list-group .list-group-item .note-tag .tag-text,
 .right-container .review .right-container-note-list .list-group .list-group-item .publish-time {
-    font-size: 2px;
+    font-size: 10px;
     /* float: right; */
     font-weight: 100;
     padding-top: 5px;
@@ -236,6 +236,6 @@ html,body {
     border-bottom: 0px;
 }
 #vditor .vditor-reset {
-    padding-left: 2.5rem !important;
-    padding-right: 1rem !important;
+    /* padding-left: 2.5rem !important;
+    padding-right: 1rem !important; */
 }
