--- a/app/components/search-note.hbs
+++ b/app/components/search-note.hbs
@@ -1,5 +1,5 @@
-<div class="tools p-4">
-    <div class="input-group">
+<div class="tools p-6">
+    <div class="input-group form-control-sm">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">
             <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
