调整搜索款样式，使用矩形样式

--- a/app/components/search-note.hbs
+++ b/app/components/search-note.hbs
@@ -1,5 +1,5 @@
-<div class="tools p-6">
-    <div class="input-group form-control-sm">
+<div class="tools p-2">
+    <div class="input-group">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">
             <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -8,6 +8,6 @@
             </svg>
         </span>
       </div>
-      <input type="text" class="form-control" placeholder="搜索笔记……" aria-label="Username" aria-describedby="basic-addon1">
+      <input type="text" class="form-control form-control-sm" placeholder="搜索笔记……" aria-label="Username" aria-describedby="basic-addon1">
     </div>
 </div>
